k8s/transparent-proxy/base/istio/virtualService.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: paralog-transparent-proxy
spec:
  hosts:
    - placeholder
  gateways:
    - placeholder
  http:
    - match:
        - uri:
            prefix: /transparent-proxy/
      rewrite:
             uri: "/"
      route:
        - destination:
            host: paralog-transparent-proxy
            port:
              number: 80
